# tiralabra

./: .coveragerc  .env  .env.test  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti-1.md  viikkoraportti-2.md  viikkoraportti-3.md  viikkoraportti-4.md  viikkoraportti-5.md  viikkoraportti-6.md  viikkoraportti-7-8.md
src/: ai_vs_ai.py  config.py  kayttoliittyma.py  main.py  peli.py  pelilauta.py  suorituskykytestit.py  toiminnot.py
src/tekoaly/: minimax.py  paras_siirto.py  pisteytys.py
src/tests/: paras_siirto_test.py  pelilauta_test.py  pisteytys_test.py  toiminnot_test.py
