[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Emilia Kupsanen <92013457+emlyy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
