[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Emilia Kupsanen <92013457+emlyy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
numpy = "^1.25.2"
pylint = "^2.17.5"
python-dotenv = "^1.0.0"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
coverage = "^7.3.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
